k8s/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: craftista
  labels:
    name: craftista
