k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: craftista-service
  namespace: craftista
spec:
  selector:
    app: craftista
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
